# django-bootstrap

./: .env.dev.example  .env.example  .env.local.example  .flake8  .gitignore  Dockerfile  README.md  conftest.py  dev.env  docker-compose.dev.yml  docker-compose.yml  local.env  pyproject.toml  tox.ini
.github/workflows/: CI.yaml
apps/rest/: apps.py
apps/rest/v1/: urls.py
backend/: Dockerfile  aws.Dockerfile  conftest.py  entrypoint.sh  non-root.Dockerfile  requirements.txt  tox.ini
backend/api/: settings.py  urls.py
backend/api/settings/: base.py  dev.py  local.py
backend/apps/example_app/: business.py  fixtures.py  services.py  tests.py
config/: urls.py
config/settings/: base.py  dev.py  local.py
