[tool.poetry]
name = "django-bootstrap"
version = "0.1.0"
description = ""
authors = ["Olivier Banville <oli.banville@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
psycopg2-binary = "^2.9.3"
djangorestframework = "^3.13.1"
django-storages = "^1.12.3"
boto3 = "^1.21.37"
gunicorn = "^20.1.0"
django-db-prefix = "^1.0.5"
django-cors-headers = "^3.11.0"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
PyYAML = "^6.0"
uritemplate = "^4.1.1"
drf-spectacular = "^0.22.0"
redis = "^4.2.2"
django-redis = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
